@@ -15,21 +15,26 @@ package org.eclipse.jdt.debug.tests;
 
 import java.lang.management.ManagementFactory;
 import java.lang.management.ThreadInfo;
+import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Date;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 
+import org.eclipse.core.internal.jobs.JobManager;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.debug.core.DebugPlugin;
 import org.eclipse.debug.core.ILaunch;
 import org.eclipse.debug.core.ILaunchManager;
+import org.eclipse.debug.internal.ui.views.console.ProcessConsole;
 import org.eclipse.jdt.debug.testplugin.JavaTestPlugin;
+import org.eclipse.jface.text.reconciler.AbstractReconciler;
 import org.eclipse.swt.widgets.Display;
 import org.junit.Assert;
 
@@ -65,6 +70,10 @@ public class TestUtil {
 		Assert.assertEquals("expected no launches after test", Collections.EMPTY_LIST, launches);
 	}
 
+	public static void logInfo(String message) {
+		System.out.println(new SimpleDateFormat("HH:mm:ss.SSS").format(new Date()) + " " + message);
+	}
+
 	public static void log(int severity, String owner, String message, Throwable... optionalError) {
 		message = "[" + owner + "] " + message;
 		Throwable error = null;
@@ -88,12 +97,12 @@ public class TestUtil {
 				}
 			}
 		} else {
-			long start = System.currentTimeMillis();
+			long timeoutNanos = System.nanoTime() + AbstractDebugTest.DEFAULT_TIMEOUT * 1_000_000L;
 			AtomicBoolean stop = new AtomicBoolean();
 			Display.getDefault().asyncExec(() -> stop.set(true));
-			while (!stop.get() && System.currentTimeMillis() - start < AbstractDebugTest.DEFAULT_TIMEOUT) {
+			while (!stop.get() && System.nanoTime() < timeoutNanos) {
 				try {
-					Thread.sleep(10);
+					Thread.sleep(1);
 				} catch (InterruptedException e) {
 					break;
 				}
@@ -104,6 +113,8 @@ public class TestUtil {
 	/**
 	 * Utility for waiting until the execution of jobs of any family has finished or timeout is reached. If no jobs are running, the method waits
 	 * given minimum wait time. While this method is waiting for jobs, UI events are processed.
+	 * <p>
+	 * <b>Note:</b> This method does not wait for jobs that belong to the families specified in {@link #getUsualJobFamiliesToIgnore()}.
 	 *
 	 * @param owner
 	 *            name of the caller which will be logged as prefix if the wait times out
@@ -114,7 +125,7 @@ public class TestUtil {
 	 * @return true if the method timed out, false if all the jobs terminated before the timeout
 	 */
 	public static boolean waitForJobs(String owner, long minTimeMs, long maxTimeMs) {
-		return waitForJobs(owner, minTimeMs, maxTimeMs, (Object[]) null);
+		return waitForJobs(owner, minTimeMs, maxTimeMs, getUsualJobFamiliesToIgnore());
 	}
 
 	/**
@@ -133,15 +144,28 @@ public class TestUtil {
 	 * @return true if the method timed out, false if all the jobs terminated before the timeout
 	 */
 	public static boolean waitForJobs(String owner, long minTimeMs, long maxTimeMs, Object... excludedFamilies) {
+		return waitForJobs(owner, null, minTimeMs, maxTimeMs, excludedFamilies);
+	}
+
+	public static boolean waitForJobs(String owner, Object jobFamily, long minTimeMs, long maxTimeMs, Object... excludedFamilies) {
 		if (maxTimeMs < minTimeMs) {
 			throw new IllegalArgumentException("Max time is smaller as min time!");
 		}
-		wakeUpSleepingJobs(null);
-		final long start = System.currentTimeMillis();
-		while (System.currentTimeMillis() - start < minTimeMs) {
+		// Not so nice workaround for https://github.com/eclipse-jdt/eclipse.jdt.debug/issues/721
+		// After https://github.com/eclipse-platform/eclipse.platform.ui/pull/3025 every opened editor
+		// means there will be a reconciler job running, which is not what we do NOT want to wait for.
+		// AbstractReconciler.class is the family object we can check for.
+		if (excludedFamilies == null) {
+			excludedFamilies = new Object[] { AbstractReconciler.class };
+		} else if (excludedFamilies.length == 1 && excludedFamilies[0] == ProcessConsole.class) {
+			excludedFamilies = getUsualJobFamiliesToIgnore();
+		}
+		wakeUpSleepingJobs(jobFamily);
+		final long startNanos = System.nanoTime();
+		while (System.nanoTime() - startNanos < minTimeMs * 1_000_000L) {
 			runEventLoop();
 			try {
-				Thread.sleep(Math.min(10, minTimeMs));
+				Thread.sleep(1);
 			} catch (InterruptedException e) {
 				// Uninterruptable
 			}
@@ -153,11 +177,12 @@ public class TestUtil {
 			} catch (InterruptedException e) {
 				// Uninterruptable
 			}
-			List<Job> jobs = getRunningOrWaitingJobs(null, excludedFamilies);
+			List<Job> jobs = getRunningOrWaitingJobs(jobFamily, excludedFamilies);
 			if (jobs.isEmpty()) {
 				// only uninteresting jobs running
 				break;
 			}
+			jobs.forEach(Job::wakeUp);
 
 			if (!Collections.disjoint(runningJobs, jobs)) {
 				// There is a job which runs already quite some time, don't wait for it to avoid test timeouts
@@ -165,21 +190,30 @@ public class TestUtil {
 				return true;
 			}
 
-			if (System.currentTimeMillis() - start >= maxTimeMs) {
+			if (System.nanoTime() - startNanos >= maxTimeMs * 1_000_000L) {
 				dumpRunningOrWaitingJobs(owner, jobs);
 				return true;
 			}
-			wakeUpSleepingJobs(null);
+			wakeUpSleepingJobs(jobFamily);
 		}
 		runningJobs.clear();
 		return false;
 	}
 
-	private static void wakeUpSleepingJobs(Object family) {
-		List<Job> sleepingJobs = getSleepingJobs(family);
-		for (Job job : sleepingJobs) {
-			job.wakeUp();
-		}
+	/**
+	 * Returns a list of job families that are usually ignored in tests.
+	 * <p>
+	 * This is used to avoid waiting for jobs that are not relevant to the test.
+	 * </p>
+	 *
+	 * @return an array of job family classes to ignore
+	 */
+	public static Object[] getUsualJobFamiliesToIgnore() {
+		return new Object[] { ProcessConsole.class, AbstractReconciler.class };
+	}
+
+	private static void wakeUpSleepingJobs(Object jobFamily) {
+		Job.getJobManager().wakeUp(jobFamily);
 	}
 
 	static Set<Job> runningJobs = new LinkedHashSet<>();
@@ -200,9 +234,10 @@ public class TestUtil {
 			runningJobs.add(job);
 			sb.append("\n'").append(job.toString()).append("'/");
 			sb.append(job.getClass().getName());
+			sb.append(":").append(JobManager.printState(job));
 			Thread thread = job.getThread();
 			if (thread != null) {
-				ThreadInfo[] threadInfos = ManagementFactory.getThreadMXBean().getThreadInfo(new long[] { thread.getId() }, true, true);
+				ThreadInfo[] threadInfos = ManagementFactory.getThreadMXBean().getThreadInfo(new long[] { thread.threadId() }, true, true);
 				if (threadInfos[0] != null) {
 					sb.append("\nthread info: ").append(threadInfos[0]);
 				}
@@ -211,7 +246,7 @@ public class TestUtil {
 		}
 
 		Thread thread = Display.getDefault().getThread();
-		ThreadInfo[] threadInfos = ManagementFactory.getThreadMXBean().getThreadInfo(new long[] { thread.getId() }, true, true);
+		ThreadInfo[] threadInfos = ManagementFactory.getThreadMXBean().getThreadInfo(new long[] { thread.threadId() }, true, true);
 		if (threadInfos[0] != null) {
 			sb.append("\n").append("UI thread info: ").append(threadInfos[0]);
 		}
@@ -227,17 +262,6 @@ public class TestUtil {
 			}
 		}
 		return running;
-	}
-
-	private static List<Job> getSleepingJobs(Object family) {
-		List<Job> sleeping = new ArrayList<>();
-		Job[] jobs = Job.getJobManager().find(family);
-		for (Job job : jobs) {
-			if (job.getState() == Job.SLEEPING) {
-				sleeping.add(job);
-			}
-		}
-		return sleeping;
 	}
 
 	private static boolean isRunningOrWaitingJob(Job job) {
